--- a/www/html/blog1.html
+++ b/www/html/blog1.html
@@ -1,56 +1,55 @@
-CTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="utf-8"> 
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/blog_page.css">
-  <link rel="stylesheet" href="css/hover_popup.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8"> 
+	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/blog_page.css">
+	<link rel="stylesheet" href="css/hover_popup.css">
 </head>
 <body>
-  <div class="header">
-    <img class="logo" src="/images/logo.png" alt="">
-    <h2>System backups</h2>
-    <div class="progress-container">
-      <div class="progress-bar" id="myBar"></div>
-    </div>  
-  </div>
+	<div class="header">
+		<h2>System backups</h2>
+		<div class="progress-container">
+			<div class="progress-bar" id="myBar"></div>
+		</div>  
+	</div>
 
-  <div class="content">
-    By system backups I'm refering to makeing a copy of the entire drive that contains am os on it, so in this blog we'll take a look at the most convenient options available to make this kind of backups.
-    <h3>Problem</h3>
-      These days I had the 
-      <div id="popup">following setup
-        <span>
-          <ul>
-            <li>an internal nvme M.2(256 GB)</li>
-            <li>an external SSD(128 GB)</li>
-          </ul>
-        </span>
-      
-      </div>, and decided that I would like to change the os from the first <div id="popup">disk<span>256 GB one</span></div>.
-
+	<div class="content">
+		By system backups I'm referring to making a copy of the entire drive that contains am os on it, so in this blog we'll take a look at the most convenient options available to make this kind of backups.
+		<h3>Problem</h3>
+			These days I had the 
+			<div id="popup">following setup
+				<span>
+					<ul>
+						<li>an internal nvme M.2(256 GB)</li>
+						<li>an external SSD(128 GB)</li>
+					</ul>
+				</span>
+			
+			</div>, and decided that I would like to change the os from the <div id="popup">first disk<span>256 GB one</span></div>.
 
 
-    <h3>Solutions</h3>
-    <ul>
-      <li>raw copy of the entire drive using dd</li>
-      <li>backup the partitioning scheme(MBR/GPT) and each partition independently</li>
-    </ul>
 
-  <h3>How it went</h3>
-  <p>
-  In the past I used the first solution in order to backup <div id="popup">the external disk<span>128 GB one</span></div> to <div id="popup">another PC<span>via sshf wich runs on top of a 500 GB HDD</span></div>, it worked but with the following <div id="popup">limitations<span><ul><li>it was verry slow(thanks to the 100 Mb/s Ethernet NIC )</li><li>cupied a lod of space( 128GB )</li></ul></u></span></div> also thanks to my <div id="popup">negligence<span>I forgot that the system was runing was on the same disk wich provoked some filesystems coruptions</span></div>, so if you ever intend to make this kind of backup preas remember to unmount the disk that you are copying.
-  </p>
-  
-  <p>
-    Fot that usecase a raw coppy was pretty ok becouse the disk was about 80% full
-  </p>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <br><br><br><br><br><br><br>
+		<h3>Solutions</h3>
+		<ul>
+			<li>raw copy of the entire drive using dd</li>
+			<li>backup the partitioning scheme(MBR/GPT) and each partition independently</li>
+		</ul>
 
-  <script src="js/scroll_bar.js"></script>
+	<h3>How it went</h3>
+	<p>
+	In the past I used the first solution in order to backup <div id="popup">the external disk<span>128 GB one</span></div> to <div id="popup">another PC<span>via sshf wich runs on top of a 500 GB HDD</span></div>, it worked but with the following <div id="popup">limitations<span><ul><li>it was verry slow(thanks to the 100 Mb/s Ethernet NIC )</li><li>cupied a lod of space( 128GB )</li></ul></u></span></div> also thanks to my <div id="popup">negligence<span>I forgot that the system was runing was on the same disk wich provoked some filesystems coruptions</span></div>, so if you ever intend to make this kind of backup preas remember to unmount the disk that you are copying.
+	</p>
+	
+	<p>
+		Fot that usecase a raw coppy was pretty ok becouse the disk was about 80% full, but now I'm facing the case that I have a disk wich is about 11% full, in this a raw backup is not eficient so I will explore the second solution.
+	</p>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<br><br><br><br><br><br><br>
+
+	<script src="js/scroll_bar.js"></script>
 </body>
 </html> 
 
