improved blog1 and started to work on some tool for automated post generation

--- a/www/html/admin/template.html
+++ b/www/html/admin/template.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/blog_page.css">
@@ -11,21 +11,14 @@
 </head>
 <body>
   <div class="header">
-	<h2>>iulian115c</h2>
+	<h2 class="titlu"><!--placehoder for title--></h2>
 	<div class="progress-container">
 		<div class="progress-bar" id="myBar"></div>
 	</div>  
   </div>
 
 	<div class="content">
-	<h2>Welcome!</h2>
-	<ul>
-		<li><a href="blog1.html">Blog1</a></li>
-		<li><a href="share">share(protected by a password) --- TO DOOO</a></li>
-	</ul>
-
-
-  <script src="js/scroll_bar.js"></script>
+	<!--placehoder for content-->
 </body>
 </html> 
 
