renamed the two blogs started so far and created a template

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -20,8 +20,9 @@
 	<div class="content">
 	<h2>Welcome!</h2>
 	<ul>
-		<li><a href="blog1.html">Blog1</a></li>
-		<li><a href="share">share(protected by a password) --- TO DOOO</a></li>
+		<li><a href="1_system_backups.html">How to make system backup</a></li>
+		<li><a href="2_boot_process.html">How to make (a stable) dual boot system</a></li>
+		<!-- <li><a href="share.html">share(protected by a password) --- TO DOOO</a></li>-->
 	</ul>
 
 
