--- a/about_me.html
+++ b/about_me.html
@@ -11,19 +11,34 @@
 
 	<body>
 		<div class="header">
-			<h2>System backups</h2>
+			<h2>About me</h2>
 			<div class="progress-container">
 				<div class="progress-bar" id="myBar"></div>
 			</div>  
 		</div>
 
-		<h4 class="date unselecable">25/11/2021</h4>
+		<h4 class="date unselecable">10/12/2021</h4>
 
 		<div class="content">
-			ajskfhasij
+			
+			<h2>About me</h2>
+			Welcone to my blog, this is my little place where is write about what I found interesting, my main interests are:
+			<ul>
+				<li>Free software</li>
+				<li>OSs and networking</li>
+				<li>Software Reverse Engeneering
+			</ul>
+			<h2>This website</h2>
+			There are two reasons why this blog has this style:
+				<ul>
+					<li>to be compatible with CLI browsers like links</li>
+					<li>to make more time for improving the content quality</li>
+				</ul>
+			<h2>Contact</h2>
+			<p>If you would like to get in touch with me you can write me at:</p>
+			<img src="/images/about/mail.png">
 
 
-			TESTTTTT
 		</div>
 		
 		<!--https://askubuntu.com/questions/523037/how-would-i-speed-up-a-full-disk-dd-->
