--- a/2_boot_process.html
+++ b/2_boot_process.html
@@ -20,11 +20,8 @@
 
 		<div class="content">
 			
-			In this article I will decribe how the boot process works based on my experience (gained from online ressources and practical exemples done by myself), for the most part I will focus on the issues that can araise durng boot process.
-
-			I will not hezitate to referenence the best online resources that hellped me to overcome most of the issues, instead of trying to reinvent the wheel, becouse obviously I'm not the most knowledgeable person that tackles this problem.
-			<br><br>
-
+			In this article, I'll describe how the boot process works focusing on three core components(firmware, bootloader, partition table) of boot process wich need to be understood in order to configure a multiboot system and troubleshoot boot problems. <br><br>
+		
 			<h2>How the boot process works</h2>
 			Becouse "A picture is worth more than a thousand words" I think it is helpfull to ilustrate a high level overview of main components that interacts during boot process.
 
@@ -33,22 +30,21 @@
 			<p class="diagram">diagram: d1</p>
 			<br>			
 
-			The takeaway from diagram <a href="#d1">d1</a> is that the firmware is the pice of software trigered whem the power button is pressed.
-			It performs a set of tasks required to turn on the system and passes control to the <div class="popup">primary bootloader</div> which can pass the control further either to a <div class="popup">secondarybootloader</div> either to the <div class="popup">operating system</div>.<br>
-			The secondary bootloader is used becouse it gives more flexibility( f.e. understands more file sytems than the firmware, you can customize it easyer) because it resids on disk and overwriting it is not as dangerous as overwriting the firmware wich may leave your system in an unusable state.
+			The takeaway from diagram <a href="#d1">d1</a> is that the <div class="popup">firmware</div> is the pice of software trigered whem the power button is pressed.
+			It performs a set of tasks required to turn on the system and passes control to the <div class="popup">primary bootloader</div> which can pass the control further either to a <div class="popup">secondary bootloader</div> either to the <div class="popup">operating system</div>if the os supports to be booted directly.<br>
+			The  <div class="popup">partition table</div> is used to store data about how partitions are oraganized on disk, depending on your firmware you may want to use different pacrtition tables(f.e. UEFI require GPT while BIOS can theoreticaly work with both MBR and GPT but this vary form one bios implementation to other, see <a href="https://www.rodsbooks.com/gdisk/bios.html">this</a>), also keep in mind that GPT has some advantages over MBR.<br>
+
+			Both UEFI and BIOS use a partition table to find the location of thethe secondary bootloader;<br>
+
+			The <div class="popup">secondary bootloader</div> is used becouse it gives more flexibility( f.e. understands more file sytems than the firmware, you can customize it easyer) because it resids on disk and overwriting it is not as dangerous/hard as overwriting the firmware wich may leave your system in an unusable state as long as you do not have a copy of the firmware available and you are unwilling/unable to solder wires directly on your motherboard.
 			<br>
-			If you do not care about this flexibility you can make the primary bootloader of the firmware to pass the execution controll straight to to OS, from my knologe Linux <a href="https://wiki.gentoo.org/wiki/EFI_stub">support</a> this kind of feature if it is booted using UEFI.
+			If you do not care about this flexibility you can make the primary bootloader of the firmware to pass the execution controll straight to to OS, Linux <a href="https://wiki.gentoo.org/wiki/EFI_stub">support</a> this kind of feature if it is booted using UEFI.
 			<br><br>
 			The OS is dependent of the firmware that is trying boot him so alway make sure that the specific version of the os you intend to install is compatible with your firmware.
 	
-			Both UEFI and BIOS are distinct pieces of firmware which are responsable to "perform hardware initialization during the booting process" and "provide runtime services for operating systems and programs"<a class="sup" id="fnref:1" href="#fn:1">1</a>;<br>
+			Both UEFI and BIOS are distinct<a class="sup" id="fnref:1" href="#fn:1">1</a> pieces of firmware which are responsable to "perform hardware initialization during the booting process" and "provide runtime services for operating systems and programs";<br>
 
-			Both UEFI and BIOS uses partition table to find out where is the (secondary) bootloader located<a class="sup" id="fnref:2" href="#fn:2">2</a>;<br>
-
-			<h2>Bootloader vs boot manager</h2>
-			<br>
-			--------------TO DO------------
-			<br>
+			<h2>External resources</h2>
 
 			Helpfull resources that can be used to install a bootloader/bootmanager can be found at:
 				<ul>
@@ -65,7 +61,7 @@
 			<!--https://uefi.org/sites/default/files/resources/UEFI_Specification_2_and_Errata_Sept16_08.pdf#page=122-->
 			<!--masquerade as a PE/COFF image <a href="https://www.kernel.org/doc/html/latest/admin-guide/efi-stub.html"></a>
 			https://www.rodsbooks.com/gdisk/bios.html
-			https://www.linuxbabe.com/command-line/how-to-use-linux-efibootmgr-examples#-->
+			-->
 
 			<br>
 			Most of the information exposed above are extrracted from the folowing sources, so if you want a more detailed overvirew of each component and transition ilustrated in diagram <a href="#d1">d1</a>, pleas see these resources:
@@ -93,12 +89,11 @@
 
 			<h3>Footnotes</h3>
 			<ol>
-				<li id="fn:1">so <div class="popup">do not</div> associate these two terms together because they are not the same thing nor UEFI is an extension of BIOS, if you do such someone may get annoyed <a href="#fnref:1">↩</a>
+				<li id="fn:1">It is a common misconception to use the term "BIOS" when refering to firmware like UEFI, keep in mind that both BIOS and UEFI are firmware;<a href="#fnref:1">↩</a>
 				</li>
-				<li id="fn:2">
-					Tehnicaly speaking the (secondary) bootloader is located either on <div class="popup">boot partition</div> so this means that <div class="popup">partition table</div> is used to identify one of these two partitions in order to be able to acces the (secondary) bootloader<a href="#fnref:2">↩</a>
-				</li>
-				<li>primary bootloader and secondary bootloader also called first-stage bootloader and second stage bootloader</li>
+				<!--<li id="fn:2">
+					<a href="#fnref:2">↩</a>
+				</li>-->
 			</ol>
 		</div>
 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
