updated path to pages

--- a/2_boot_process.html
+++ b/2_boot_process.html
@@ -26,7 +26,7 @@
 			Becouse "A picture is worth more than a thousand words" I think it is helpfull to ilustrate a high level overview of main components that interacts during boot process.
 
 			<br><br><br>
-			<embed id="d1" src="/images/2/boot_process.svg">
+			<embed id="d1" src="/blog/images/2/boot_process.svg">
 			<p class="diagram">diagram: d1</p>
 			<br>			
 
