--- a/about_me.html
+++ b/about_me.html
@@ -36,7 +36,7 @@
 				</ul>
 			<h2>Contact</h2>
 			<p>If you would like to get in touch with me you can write me at:</p>
-			<img src="/images/about/mail.png">
+			<img src="/blog/images/about/mail.png">
 
 
 		</div>
