added AdSense link to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/blog_page.css">
 	<link rel="stylesheet" href="css/hover_popup.css">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7295569151601095" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="header">
